--- a/sass/main.css
+++ b/sass/main.css
@@ -1,1 +1,14 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+.header {
+  background: #9356DC;
+  height: 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+}
+/*# sourceMappingURL=main.css.map */
