--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,60 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 100%;
+}
+
+body {
+  box-sizing: border-box;
+  background: #fff;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .header {
-  background: #9356DC;
-  height: 10rem;
+  background: #fff;
   display: flex;
+  flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
+  height: 10rem;
+}
+.header__logo {
+  display: flex;
+  flex-direction: row;
+  height: 50%;
+  justify-self: center;
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #F2F2F2;
+  height: 50%;
+}
+.form__position {
+  border: none;
+  justify-self: center;
+  padding: 0 5%;
+}
+.form__rechercher {
+  border: none;
+  justify-self: center;
+  background-color: #F2F2F2;
+  font-weight: 600;
+  font-size: larger;
 }
 
 /*# sourceMappingURL=style.css.map */
