--- a/sass/main.css
+++ b/sass/main.css
@@ -1,9 +1,12 @@
 .header {
-  background: #9356DC;
-  height: 10rem;
+  background: #fff;
+  height: 5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
