--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,7 @@
 @import "./utils/variable";
+
+@import "./base/base";
+@import "./base/typography";
+
 @import "./layout/header";
+@import "./layout/form";
