--- a/sass/Utils/_variable.scss
+++ b/sass/Utils/_variable.scss
@@ -2,3 +2,9 @@ $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 $colour-white: #fff;
+$colour-lightgray:#F2F2F2;
+$colour-gray:#e2e0e0;
+$colour-black : #000;
+
+$layout_margin : 2rem;
+$padding:5%;
