--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,28 @@ body {
 
 body {
   font-family: "Roboto", sans-serif;
+  color: #000;
+}
+
+h1 {
+  font-family: "Shrikhand", cursive;
+  font-weight: 100;
+  font-size: x-large;
+}
+
+input[type=search]::placeholder {
+  color: #000;
+  font-weight: 600;
+}
+
+.btn {
+  color: white;
+  background: linear-gradient(#9356DC, #FF79DA);
+  width: 250px;
+  height: 50px;
+  border: none;
+  box-shadow: 1px 1px 2px 2px #F2F2F2;
+  border-radius: 25px;
 }
 
 .header {
@@ -41,8 +63,9 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: #F2F2F2;
+  background-color: #e2e0e0;
   height: 50%;
+  box-shadow: inset 1px 4px 9px -6px;
 }
 .form__position {
   border: none;
@@ -52,9 +75,26 @@ body {
 .form__rechercher {
   border: none;
   justify-self: center;
-  background-color: #F2F2F2;
+  background-color: #e2e0e0;
   font-weight: 600;
-  font-size: larger;
+  /* font-size: larger; */
+}
+
+.slogan {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #F2F2F2;
+  padding: 10% 10%;
+  text-align: center;
+}
+.slogan h1 {
+  margin-bottom: 2rem;
+}
+.slogan p {
+  margin-bottom: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
