--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -4,8 +4,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #F2F2F2;
+    background-color: $colour-gray;
     height: 50%;
+    box-shadow: inset 1px 4px 9px -6px;
    
     &__position{
         border: none;
@@ -15,9 +16,10 @@
     &__rechercher{
         border: none;
         justify-self: center;
-        background-color: #F2F2F2;
+        background-color: $colour-gray;
         font-weight: 600;
-        font-size: larger;
+        /* font-size: larger; */
+        
 
     }
 }
