--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,9 @@
 
 @import "./base/base";
 @import "./base/typography";
+@import "./composants/bouton";
 
 @import "./layout/header";
 @import "./layout/form";
+@import "./layout/container";
+@import "./layout/slogan";
