--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/variable";
+@import "./utils/mixin";
 
 @import "./base/base";
 @import "./base/typography";
@@ -8,3 +9,4 @@
 @import "./layout/form";
 @import "./layout/container";
 @import "./layout/slogan";
+@import "./layout/fonctionnement";
