--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,19 +26,59 @@ h1 {
   font-size: x-large;
 }
 
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: large;
+}
+
 input[type=search]::placeholder {
   color: #000;
   font-weight: 600;
+  font-size: medium;
+}
+
+button {
+  color: #000;
+  font-weight: 550;
+  font-size: medium;
 }
 
 .btn {
   color: white;
   background: linear-gradient(#9356DC, #FF79DA);
-  width: 250px;
+  width: 230px;
   height: 50px;
   border: none;
-  box-shadow: 1px 1px 2px 2px #F2F2F2;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 25px;
+}
+
+.btn_fctnt {
+  width: 100%;
+  background-color: #F6F6F6;
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
+  align-items: center;
+  padding: 10px;
+  border-radius: 18px;
+  border: none;
+  height: 70px;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 0.5rem 0;
+}
+.btn_fctnt__numero {
+  display: flex;
+  background: #9356DC;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: normal;
 }
 
 .header {
@@ -59,25 +99,23 @@ input[type=search]::placeholder {
 
 .form {
   width: 100%;
+  flex: 1;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: #e2e0e0;
-  height: 50%;
   box-shadow: inset 1px 4px 9px -6px;
 }
 .form__position {
   border: none;
-  justify-self: center;
-  padding: 0 5%;
+  justify-self: baseline;
+  padding: 0 1rem;
 }
 .form__rechercher {
   border: none;
-  justify-self: center;
+  justify-self: baseline;
   background-color: #e2e0e0;
-  font-weight: 600;
-  /* font-size: larger; */
 }
 
 .slogan {
@@ -87,14 +125,23 @@ input[type=search]::placeholder {
   justify-content: space-evenly;
   align-items: center;
   background-color: #F2F2F2;
-  padding: 10% 10%;
+  padding: 7.5% 10%;
   text-align: center;
 }
 .slogan h1 {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .slogan p {
   margin-bottom: 2rem;
+}
+
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 1rem;
+}
+.fonctionnement h2 {
+  margin-bottom: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
