--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,21 @@ h1 {
     font-weight: 100;
     font-size: x-large; 
 }
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: large; 
+}
+
 input[type="search"]::placeholder {
     color: $colour-black;
     font-weight: 600;
+    font-size:medium; 
 }
+
+button {
+    color: $colour-black;
+    font-weight: 550;
+    font-size:medium; 
+    }
+
