--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -1,24 +1,23 @@
 .form{
     width: 100%;
+    flex:1;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: $colour-gray;
-    height: 50%;
     box-shadow: inset 1px 4px 9px -6px;
    
     &__position{
         border: none;
-        justify-self: center;
-        padding: 0 5%;
+        justify-self: baseline;
+        padding: 0 $layout_margin;
     } 
     &__rechercher{
         border: none;
-        justify-self: center;
+        justify-self:baseline;
         background-color: $colour-gray;
-        font-weight: 600;
-        /* font-size: larger; */
+       
         
 
     }
