--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ button {
 
 .btn_fctnt {
   width: 100%;
-  background-color: #F6F6F6;
+  background-color: #F2F2F2;
   display: flex;
   justify-content: flex-start;
   align-content: center;
@@ -99,13 +99,13 @@ button {
 
 .form {
   width: 100%;
-  flex: 1;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: #e2e0e0;
   box-shadow: inset 1px 4px 9px -6px;
+  height: 50%;
 }
 .form__position {
   border: none;
