--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -1,12 +1,13 @@
 .form{
     width: 100%;
-    flex:1;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: $colour-gray;
     box-shadow: inset 1px 4px 9px -6px;
+    height:50%;
    
     &__position{
         border: none;
