--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,9 +4,11 @@
 @import "./base/base";
 @import "./base/typography";
 @import "./composants/bouton";
+@import "./composants/card";
 
 @import "./layout/header";
 @import "./layout/form";
 @import "./layout/container";
 @import "./layout/slogan";
 @import "./layout/fonctionnement";
+@import "./layout/resto";
