--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,13 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   font-size: large;
+  margin-bottom: 1rem;
+}
+
+h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: medium;
 }
 
 input[type=search]::placeholder {
@@ -96,44 +103,50 @@ button {
   color: #9356DC;
 }
 
-.card-resto {
+a.card-resto {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   background-color: white;
   box-shadow: 2px 2px 20px rgb(226, 223, 223);
   border-radius: 20px;
+  height: 230px;
+  text-decoration: none;
   position: relative;
   box-sizing: border-box;
   color: #333;
-  text-decoration: none;
-  width: 47%;
+  width: 100%;
+  margin-bottom: 4%;
 }
-.card-resto__card-image {
+a.card-resto .card-image {
+  height: 70%;
   overflow: hidden;
   position: relative;
   border-radius: 20px 20px 0px 0px;
   box-sizing: border-box;
-  height: 25vh;
 }
-.card-resto__card-image img {
+a.card-resto .card-image img {
   filter: grayscale(0);
   min-height: 100%;
-  max-width: 140%;
+  max-width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.card-resto--object-fit-norm {
+a.card-resto .object-fit-norm {
   object-fit: cover;
 }
-.card-resto h4 {
-  box-sizing: border-box;
-  padding: 5%;
-  margin: 0;
-}
-.card-resto .card-image img:hover {
+a.card-resto .card-image img:hover {
   filter: grayscale(1);
 }
-
+a.card-resto .bloc-nom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 1rem;
+}
 .header {
   background: #fff;
   display: flex;
@@ -192,9 +205,6 @@ button {
   display: flex;
   flex-direction: column;
   margin: 2rem 1.2rem;
-}
-.fctnt h2 {
-  margin-bottom: 1rem;
 }
 .fctnt__ens_btns {
   display: flex;
