--- a/sass/composants/_card.scss
+++ b/sass/composants/_card.scss
@@ -1,4 +1,4 @@
-a.card-resto {
+.card-resto {
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -14,14 +14,27 @@ a.card-resto {
     width: 100%;
     margin-bottom: 4%;
 
-
+    &__new{
+        
+        position: absolute;
+        width: 75px;
+        padding: 0.5*$layout_margin 0;
+        text-align: center;
+        right: $layout_margin;
+        top: $layout_margin;
+        background-color: $colour-tertiary;
+        color:darken($colour-tertiary, 50%);
+        z-index: 1;
+        & h4{
+            font-size: 80%;
+        }
+    }
     & .card-image {
         height: 70%;
         overflow: hidden;
         position: relative;
         border-radius: 20px 20px 0px 0px;
         box-sizing: border-box;
-
     }
 
     & .card-image img {
@@ -33,24 +46,32 @@ a.card-resto {
         left: 50%;
         transform: translate(-50%, -50%);
     }
+     
 
     & .object-fit-norm {
         object-fit: cover;
     }
+
     .card-image img:hover {
         filter: grayscale(1);
     }
-& .bloc-nom{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    box-sizing: border-box;
-    padding: $layout_margin;
-    &__texte {
-       
 
+    & .bloc-nom {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        box-sizing: border-box;
+        padding: $layout_margin;
+        
+        &:hover i{
+           
+           
+            color: $colour-primary;
+                background-color: rgba($colour-primary, 0.2);
+            
+        }
+        
     }
 
-    
-}
 }
