--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   color: #000;
 }
 
@@ -28,6 +28,13 @@ h1 {
 
 h2 {
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: large;
+  margin-bottom: 1rem;
+}
+
+footer h2 {
+  font-family: "Shrikhand", cursive;
   font-weight: 600;
   font-size: large;
   margin-bottom: 1rem;
@@ -238,6 +245,30 @@ button {
   flex-direction: column;
   background-color: #F2F2F2;
   padding: 2rem 1rem;
+}
+
+footer {
+  background-color: #302d2d;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  padding: 2rem 2rem;
+  color: white;
+}
+footer a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 900;
+}
+footer a i {
+  margin-right: 1rem;
+  width: 25px;
+  height: 25px;
+}
+footer li {
+  list-style-type: none;
+  margin-bottom: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
