--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,14 @@ footer h2 {
   font-family: "Shrikhand", cursive;
   font-weight: 600;
   font-size: large;
-  margin-bottom: 1rem;
+  color: white;
+}
+
+footer li a {
+  font-family: "Roboto", "Arial", sans-serif;
+  font-weight: 600;
+  font-size: large;
+  color: white;
 }
 
 h4 {
@@ -178,16 +185,16 @@ button {
   background: #fff;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
-  height: 10rem;
+  height: 5rem;
 }
 .header__logo {
   display: flex;
   flex-direction: row;
-  height: 50%;
-  justify-self: center;
+  justify-content: center;
 }
 
 .form {
@@ -198,7 +205,7 @@ button {
   align-items: center;
   background-color: #e2e0e0;
   box-shadow: inset 1px 4px 9px -6px;
-  height: 50%;
+  height: 5rem;
 }
 .form__position {
   border: none;
@@ -209,6 +216,29 @@ button {
   border: none;
   justify-self: baseline;
   background-color: #e2e0e0;
+}
+
+footer {
+  background-color: #302d2d;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 2rem 2rem;
+}
+footer a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 900;
+}
+footer a i {
+  margin-right: 0.5rem;
+  width: 20px;
+  height: 20px;
+}
+footer li {
+  list-style-type: none;
+  margin-bottom: 0.5rem;
+  font-weight: 900;
 }
 
 .slogan {
@@ -245,30 +275,6 @@ button {
   flex-direction: column;
   background-color: #F2F2F2;
   padding: 2rem 1rem;
-}
-
-footer {
-  background-color: #302d2d;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  padding: 2rem 2rem;
-  color: white;
-}
-footer a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 900;
-}
-footer a i {
-  margin-right: 1rem;
-  width: 25px;
-  height: 25px;
-}
-footer li {
-  list-style-type: none;
-  margin-bottom: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
