--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,7 +17,13 @@ footer h2 {
     font-family: 'Shrikhand', cursive;
     font-weight: 600;
     font-size: large; 
-    margin-bottom: $layout_margin;
+    color: white;
+}
+footer li a {
+    font-family: 'Roboto', 'Arial', sans-serif;
+    font-weight: 600;
+    font-size: large; 
+    color: white;
 }
 h4 {
     font-family: Arial, Helvetica, sans-serif;
