--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,27 +2,32 @@ footer {
     background-color: darken($colour-gray, 70%);
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    width: 100%; 
+    
+    width: 100%;
     padding: 2*$layout_margin 2*$layout_margin;
-    color: white;
+    
+
     & a {
         text-decoration: none;
         color: $colour-white;
         font-weight: 900;
-        & i{
-            margin-right: $layout_margin;
-            
-    width: 25px;
-    height: 25px;
-            
-        }
         
+
+        & i {
+            margin-right: 0.5*$layout_margin;
+            width: 20px;
+            height: 20px;
+
+        }
+
     }
 
-    & li{
-        list-style-type: none; 
-        margin-bottom: $layout_margin; 
+    & li {
+        list-style-type: none;
+        margin-bottom: 0.5*$layout_margin;
+        font-weight: 900;
+        
+      
     }
-   
+
 }
