--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -7,7 +7,7 @@
     align-items: center;
     background-color: $colour-gray;
     box-shadow: inset 1px 4px 9px -6px;
-    height:50%;
+    height:5rem;
    
     &__position{
         border: none;
