--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,16 +2,16 @@
     background: $colour-white;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     width: 100%; 
-    height: 10rem;
+    height: 5rem;
     
     &__logo{
         display: flex;
         flex-direction: row;
-        height:50%;
-        justify-self: center;
+        justify-content: center;
        
     }
    
