--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,6 @@
 
 @import "./layout/header";
 @import "./layout/form";
-@import "./layout/container";
-@import "./layout/slogan";
-@import "./layout/fonctionnement";
-@import "./layout/resto";
 @import "./layout/footer";
+
+@import "./pages/accueil";
