creation page menu palette

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -19,7 +19,9 @@ footer {
             height: 20px;
 
         }
-
+        &:hover{
+            color: $colour-primary;
+        }
     }
 
     & li {
