--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,7 +120,7 @@ button {
 .card-resto {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  /* align-items: stretch; */
   background-color: white;
   box-shadow: 2px 2px 20px rgb(226, 223, 223);
   border-radius: 20px;
@@ -184,7 +184,7 @@ button {
 .header {
   background: #fff;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -195,6 +195,10 @@ button {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width: 80%;
+}
+.header i {
+  width: 20%;
 }
 
 .form {
@@ -234,6 +238,9 @@ footer a i {
   margin-right: 0.5rem;
   width: 20px;
   height: 20px;
+}
+footer a:hover {
+  color: #9356DC;
 }
 footer li {
   list-style-type: none;
@@ -275,6 +282,56 @@ footer li {
   flex-direction: column;
   background-color: #F2F2F2;
   padding: 2rem 1rem;
+}
+
+.menu {
+  /* ENTETE */
+  /*  ENTREES */
+  /* PLATS */
+  /* DESSERTS */
+}
+.menu__entete {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  box-sizing: border-box;
+  width: 100%;
+}
+.menu__entete img {
+  width: 100%;
+  height: 255px;
+  object-fit: cover;
+}
+.menu__entete .nom_resto {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 2rem;
+  border-radius: 45px 45px 0 0;
+  margin-top: -2rem;
+  background-color: #F2F2F2;
+}
+.menu__description {
+  padding: 2rem;
+  background-color: #F2F2F2;
+}
+.menu__description--entree h3 {
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+.menu__description--entree .bloc_plat {
+  width: 100%;
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 20px;
+  margin-bottom: 1rem;
+}
+.menu__description--entree .bloc_plat--details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 /*# sourceMappingURL=style.css.map */
