--- a/sass/composants/_card.scss
+++ b/sass/composants/_card.scss
@@ -1,7 +1,7 @@
 .card-resto {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    /* align-items: stretch; */
     background-color: white;
     box-shadow: 2px 2px 20px rgb(226 223 223);
     border-radius: 20px;
