--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,21 @@
 .header {
     background: $colour-white;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%; 
+    width: 100%;
     height: 5rem;
-    
-    &__logo{
+
+    &__logo {
         display: flex;
         flex-direction: row;
         justify-content: center;
-       
+        width: 80%;
     }
-   
+
+    & i {
+        width: 20%;
+    }
 }
