--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/* mixin for multiline */
 *,
 *::after,
 *::before {
@@ -195,10 +196,7 @@ button {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 80%;
-}
-.header i {
-  width: 20%;
+  width: 90%;
 }
 
 .form {
@@ -286,9 +284,7 @@ footer li {
 
 .menu {
   /* ENTETE */
-  /*  ENTREES */
-  /* PLATS */
-  /* DESSERTS */
+  /*  PLATS */
 }
 .menu__entete {
   display: flex;
@@ -314,24 +310,40 @@ footer li {
   background-color: #F2F2F2;
 }
 .menu__description {
-  padding: 2rem;
+  padding: 1rem;
   background-color: #F2F2F2;
 }
-.menu__description--entree h3 {
+.menu__description--titre {
+  margin-bottom: 3rem;
   text-transform: uppercase;
   margin-bottom: 1rem;
 }
-.menu__description--entree .bloc_plat {
+.menu__description--bloc_plat {
   width: 100%;
   background-color: #fff;
   padding: 1rem;
   border-radius: 20px;
   margin-bottom: 1rem;
 }
-.menu__description--entree .bloc_plat--details {
+.menu__description--bloc_plat h4 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 80%;
+}
+.menu__description--bloc_plat--details {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  /* & p{
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      margin-right: 2%;
+  } */
+}
+.menu__description--bloc_plat--details h4 {
+  margin-left: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
