--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-/* mixin for multiline */
 *,
 *::after,
 *::before {
@@ -316,7 +315,19 @@ footer li {
 .menu__description--titre {
   margin-bottom: 3rem;
   text-transform: uppercase;
+  padding-bottom: 0.5rem;
   margin-bottom: 1rem;
+  border-bottom: 3px solid #99E2D0;
+  position: relative;
+}
+.menu__description--titre:after {
+  content: "";
+  width: 93%;
+  height: 10px;
+  position: absolute;
+  right: -1.5rem;
+  top: 1.5rem;
+  background-color: #F2F2F2;
 }
 .menu__description--bloc_plat {
   width: 100%;
@@ -324,26 +335,29 @@ footer li {
   padding: 1rem;
   border-radius: 20px;
   margin-bottom: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .menu__description--bloc_plat h4 {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  width: 80%;
 }
 .menu__description--bloc_plat--details {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* & p{
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-      margin-right: 2%;
-  } */
+  align-items: center;
+}
+.menu__description--bloc_plat--details p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-right: 2%;
 }
 .menu__description--bloc_plat--details h4 {
-  margin-left: 10px;
+  margin-left: 10%;
+  overflow: visible;
+  text-overflow: initial;
 }
 
 /*# sourceMappingURL=style.css.map */
