--- a/sass/Utils/_mixin.scss
+++ b/sass/Utils/_mixin.scss
@@ -1,3 +1,8 @@
 @mixin shadow{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+@mixin textcut {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
