modif layout pourcentage

--- a/sass/Utils/_variable.scss
+++ b/sass/Utils/_variable.scss
@@ -6,5 +6,5 @@ $colour-lightgray:#F2F2F2;
 $colour-gray:#e2e0e0;
 $colour-black : #000;
 
-$layout_margin : 1rem;
+$layout_margin : 4.4%;
 $padding:5%;
