--- a/sass/composants/_bouton.scss
+++ b/sass/composants/_bouton.scss
@@ -1,6 +1,6 @@
 .btn {
     color: white;
-    background: linear-gradient($colour-primary, $colour-secondary);
+    background: linear-gradient($colour-secondary, $colour-primary);
     width: 230px;
     height: 50px;
     border: none;
@@ -9,11 +9,15 @@
 
     &:hover {
        color: $colour-lightgray;
-       background: linear-gradient($colour-secondary, $colour-primary);
+       background: linear-gradient($colour-primary, $colour-secondary);
 
     }
 }
-
+.cursor{
+    &:hover{
+        cursor: pointer;
+    }
+}
 .btn_fctnt {
     width: 98%;
     background-color: $colour-lightgray;
