--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,9 @@
 @import "./base/base";
 @import "./base/typography";
 @import "./composants/bouton";
+
 @import "./composants/card";
+@import "./composants/loader";
 
 @import "./layout/header";
 @import "./layout/form";
