--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   font-size: large;
-  margin-bottom: 1rem;
+  margin-bottom: 4.4%;
 }
 
 footer h2 {
@@ -67,7 +67,7 @@ button {
 
 .btn {
   color: white;
-  background: linear-gradient(#9356DC, #FF79DA);
+  background: linear-gradient(#FF79DA, #9356DC);
   width: 230px;
   height: 50px;
   border: none;
@@ -76,7 +76,11 @@ button {
 }
 .btn:hover {
   color: #F2F2F2;
-  background: linear-gradient(#FF79DA, #9356DC);
+  background: linear-gradient(#9356DC, #FF79DA);
+}
+
+.cursor:hover {
+  cursor: pointer;
 }
 
 .btn_fctnt {
@@ -90,8 +94,8 @@ button {
   height: 80px;
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin: 0.5rem 0;
-  left: 1rem;
+  margin: 2.2% 0;
+  left: 4.4%;
 }
 .btn_fctnt__numero {
   display: flex;
@@ -105,10 +109,10 @@ button {
   font-weight: normal;
   margin: 0;
   position: relative;
-  left: -1rem;
+  left: -4.4%;
 }
 .btn_fctnt i {
-  margin-right: 1.5rem;
+  margin-right: 6.6%;
 }
 .btn_fctnt:hover {
   background-color: rgba(147, 86, 220, 0.2);
@@ -135,10 +139,10 @@ button {
 .card-resto__new {
   position: absolute;
   width: 75px;
-  padding: 0.5rem 0;
+  padding: 2.2% 0;
   text-align: center;
-  right: 1rem;
-  top: 1rem;
+  right: 4.4%;
+  top: 4.4%;
   background-color: #99E2D0;
   color: #1b6150;
   z-index: 1;
@@ -174,13 +178,32 @@ button {
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 4.4%;
 }
 .card-resto .bloc-nom:hover i {
   color: #9356DC;
   background-color: rgba(147, 86, 220, 0.2);
 }
 
+.loader {
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .header {
   background: #fff;
   display: flex;
@@ -211,7 +234,7 @@ button {
 .form__position {
   border: none;
   justify-self: baseline;
-  padding: 0 1rem;
+  padding: 0 4.4%;
 }
 .form__rechercher {
   border: none;
@@ -224,7 +247,7 @@ footer {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 2rem 2rem;
+  padding: 8.8% 6.6%;
 }
 footer a {
   text-decoration: none;
@@ -232,7 +255,7 @@ footer a {
   font-weight: 900;
 }
 footer a i {
-  margin-right: 0.5rem;
+  margin-right: 2.2%;
   width: 20px;
   height: 20px;
 }
@@ -241,7 +264,7 @@ footer a:hover {
 }
 footer li {
   list-style-type: none;
-  margin-bottom: 0.5rem;
+  margin-bottom: 2.2%;
   font-weight: 900;
 }
 
@@ -256,16 +279,16 @@ footer li {
   text-align: center;
 }
 .slogan h1 {
-  margin-bottom: 1rem;
+  margin-bottom: 4.4%;
 }
 .slogan p {
-  margin-bottom: 2rem;
+  margin-bottom: 8.8%;
 }
 
 .fctnt {
   display: flex;
   flex-direction: column;
-  margin: 2rem 1.2rem;
+  margin: 8.8% 5.28%;
 }
 .fctnt__ens_btns {
   display: flex;
@@ -278,7 +301,7 @@ footer li {
   display: flex;
   flex-direction: column;
   background-color: #F2F2F2;
-  padding: 2rem 1rem;
+  padding: 8.8% 4.4%;
 }
 
 .menu {
@@ -303,20 +326,20 @@ footer li {
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
-  padding: 2rem;
+  padding: 8.8%;
   border-radius: 45px 45px 0 0;
-  margin-top: -2rem;
+  margin-top: -8.8%;
   background-color: #F2F2F2;
 }
 .menu__description {
-  padding: 1rem;
+  padding: 4.4%;
   background-color: #F2F2F2;
 }
 .menu__description--titre {
-  margin-bottom: 3rem;
+  margin-bottom: 13.2%;
   text-transform: uppercase;
-  padding-bottom: 0.5rem;
-  margin-bottom: 1rem;
+  padding-bottom: 2.2%;
+  margin-bottom: 4.4%;
   border-bottom: 3px solid #99E2D0;
   position: relative;
 }
@@ -325,16 +348,16 @@ footer li {
   width: 93%;
   height: 10px;
   position: absolute;
-  right: -1.5rem;
-  top: 1.5rem;
+  right: -6.6%;
+  top: 6.6%;
   background-color: #F2F2F2;
 }
 .menu__description--bloc_plat {
   width: 100%;
   background-color: #fff;
-  padding: 1rem;
+  padding: 4.4%;
   border-radius: 20px;
-  margin-bottom: 1rem;
+  margin-bottom: 4.4%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .menu__description--bloc_plat h4 {
