--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,385 +1,19 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+/* Error: Undefined mixin.
+ *    ,
+ * 19 | /    @include desktop-only{
+ * 20 | |        flex-direction: row;
+ * 21 | \    }
+ *    '
+ *   sass/pages/_accueil.scss 19:4  @import
+ *   sass/main.scss 15:9            root stylesheet */
 
-html {
-  font-size: 100%;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined mixin.\a    \2577 \a 19 \2502  \250c     @include desktop-only{\a 20 \2502  \2502         flex-direction: row;\a 21 \2502  \2514     }\a    \2575 \a   sass/pages/_accueil.scss 19:4  @import\a   sass/main.scss 15:9            root stylesheet";
 }
-
-body {
-  box-sizing: border-box;
-  background: #fff;
-}
-
-body {
-  font-family: "Roboto", "Arial", sans-serif;
-  color: #000;
-}
-
-h1 {
-  font-family: "Shrikhand", cursive;
-  font-weight: 100;
-  font-size: x-large;
-}
-
-h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: large;
-  margin-bottom: 4.4%;
-}
-
-footer h2 {
-  font-family: "Shrikhand", cursive;
-  font-weight: 600;
-  font-size: large;
-  color: white;
-}
-
-footer li a {
-  font-family: "Roboto", "Arial", sans-serif;
-  font-weight: 600;
-  font-size: large;
-  color: white;
-}
-
-h4 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: medium;
-}
-
-input[type=search]::placeholder {
-  color: #000;
-  font-weight: 600;
-  font-size: medium;
-}
-
-button {
-  color: #000;
-  font-weight: 550;
-  font-size: medium;
-}
-
-.btn {
-  color: white;
-  background: linear-gradient(#FF79DA, #9356DC);
-  width: 230px;
-  height: 50px;
-  border: none;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 25px;
-}
-.btn:hover {
-  color: #F2F2F2;
-  background: linear-gradient(#9356DC, #FF79DA);
-}
-
-.cursor:hover {
-  cursor: pointer;
-}
-
-.btn_fctnt {
-  width: 98%;
-  background-color: #F2F2F2;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  border-radius: 18px;
-  border: none;
-  height: 80px;
-  text-align: center;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin: 2.2% 0;
-  left: 4.4%;
-}
-.btn_fctnt__numero {
-  display: flex;
-  background: #9356DC;
-  border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  font-weight: normal;
-  margin: 0;
-  position: relative;
-  left: -4.4%;
-}
-.btn_fctnt i {
-  margin-right: 6.6%;
-}
-.btn_fctnt:hover {
-  background-color: rgba(147, 86, 220, 0.2);
-}
-.btn_fctnt:hover i {
-  color: #9356DC;
-}
-
-.card-resto {
-  display: flex;
-  flex-direction: column;
-  /* align-items: stretch; */
-  background-color: white;
-  box-shadow: 2px 2px 20px rgb(226, 223, 223);
-  border-radius: 20px;
-  height: 230px;
-  text-decoration: none;
-  position: relative;
-  box-sizing: border-box;
-  color: #333;
-  width: 100%;
-  margin-bottom: 4%;
-}
-.card-resto__new {
-  position: absolute;
-  width: 75px;
-  padding: 2.2% 0;
-  text-align: center;
-  right: 4.4%;
-  top: 4.4%;
-  background-color: #99E2D0;
-  color: #1b6150;
-  z-index: 1;
-}
-.card-resto__new h4 {
-  font-size: 80%;
-}
-.card-resto .card-image {
-  height: 70%;
-  overflow: hidden;
-  position: relative;
-  border-radius: 20px 20px 0px 0px;
-  box-sizing: border-box;
-}
-.card-resto .card-image img {
-  filter: grayscale(0);
-  min-height: 100%;
-  max-width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.card-resto .object-fit-norm {
-  object-fit: cover;
-}
-.card-resto .card-image img:hover {
-  filter: grayscale(1);
-}
-.card-resto .bloc-nom {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 4.4%;
-}
-.card-resto .bloc-nom:hover i {
-  color: #9356DC;
-  background-color: rgba(147, 86, 220, 0.2);
-}
-
-.loader {
-  border: 16px solid #f3f3f3;
-  /* Light grey */
-  border-top: 16px solid #3498db;
-  /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.header {
-  background: #fff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 5rem;
-}
-.header__logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 90%;
-}
-
-.form {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: #e2e0e0;
-  box-shadow: inset 1px 4px 9px -6px;
-  height: 5rem;
-}
-.form__position {
-  border: none;
-  justify-self: baseline;
-  padding: 0 4.4%;
-}
-.form__rechercher {
-  border: none;
-  justify-self: baseline;
-  background-color: #e2e0e0;
-}
-
-footer {
-  background-color: #302d2d;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 8.8% 6.6%;
-}
-footer a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 900;
-}
-footer a i {
-  margin-right: 2.2%;
-  width: 20px;
-  height: 20px;
-}
-footer a:hover {
-  color: #9356DC;
-}
-footer li {
-  list-style-type: none;
-  margin-bottom: 2.2%;
-  font-weight: 900;
-}
-
-.slogan {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #F2F2F2;
-  padding: 7.5% 10%;
-  text-align: center;
-}
-.slogan h1 {
-  margin-bottom: 4.4%;
-}
-.slogan p {
-  margin-bottom: 8.8%;
-}
-
-.fctnt {
-  display: flex;
-  flex-direction: column;
-  margin: 8.8% 5.28%;
-}
-.fctnt__ens_btns {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.resto {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: #F2F2F2;
-  padding: 8.8% 4.4%;
-}
-
-.menu {
-  /* ENTETE */
-  /*  PLATS */
-}
-.menu__entete {
-  display: flex;
-  flex-direction: column;
-  text-decoration: none;
-  box-sizing: border-box;
-  width: 100%;
-}
-.menu__entete img {
-  width: 100%;
-  height: 255px;
-  object-fit: cover;
-}
-.menu__entete .nom_resto {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 8.8%;
-  border-radius: 45px 45px 0 0;
-  margin-top: -8.8%;
-  background-color: #F2F2F2;
-}
-.menu__description {
-  padding: 4.4%;
-  background-color: #F2F2F2;
-}
-.menu__description--titre {
-  margin-bottom: 13.2%;
-  text-transform: uppercase;
-  padding-bottom: 2.2%;
-  margin-bottom: 4.4%;
-  position: relative;
-}
-.menu__description--titre:after {
-  content: "";
-  border-bottom: 3px solid #99E2D0;
-  width: 93%;
-  height: 10px;
-  position: absolute;
-  right: -6.6%;
-  top: 6.6%;
-}
-.menu__description--bloc_plat {
-  width: 100%;
-  background-color: #fff;
-  padding: 4.4%;
-  border-radius: 20px;
-  margin-bottom: 4.4%;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.menu__description--bloc_plat h4 {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.menu__description--bloc_plat--details {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.menu__description--bloc_plat--details p {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-right: 2%;
-}
-.menu__description--bloc_plat--details h4 {
-  margin-left: 10%;
-  overflow: visible;
-  text-overflow: initial;
-}
-
-/*# sourceMappingURL=style.css.map */
