--- a/sass/Utils/_mixin.scss
+++ b/sass/Utils/_mixin.scss
@@ -6,3 +6,18 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+
+
+@mixin desktop-only {
+    @media screen and (min-width: map-get($breakpoints, desktop)){
+        &{ @content; }
+        }
+    }
+@mixin tablet-only {
+    @media screen and (min-width: map-get($breakpoints, tablet)) and (max-width: map-get($breakpoints, desktop)){
+    @content;
+        }
+    }
+
+    
