--- a/sass/Utils/_variable.scss
+++ b/sass/Utils/_variable.scss
@@ -9,3 +9,8 @@ $colour-black : #000;
 $layout_margin :1rem;
 /* $layout_margin : 4.4%; */
 $padding:5%;
+
+$breakpoints: (
+tablet: 768px,
+desktop: 992px
+); 
