--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -43,10 +43,10 @@
             &:after {
                 content: '';
                 border-bottom: 3px solid $colour-tertiary;
-                width: 93%;
+                width: 50px;
                 height: 10px;
                 position: absolute;
-                right:-1.5*$layout_margin;
+                left:0;
                 top: 1.5*$layout_margin;
                 
             }
