media queries desktop

--- a/sass/composants/_bouton.scss
+++ b/sass/composants/_bouton.scss
@@ -31,6 +31,12 @@
     @include shadow;
     margin: 0.5*$layout_margin 0;
     left: $layout_margin;
+    @include desktop-only{
+        width: 60%;
+        margin-right: 2*$layout_margin;
+        margin-left: 2*$layout_margin;
+        padding-right: 2%;
+    } 
 
     &__numero {
         display: flex;
