--- a/sass/composants/_card.scss
+++ b/sass/composants/_card.scss
@@ -1,21 +1,23 @@
 .card-resto {
     display: flex;
     flex-direction: column;
-    /* align-items: stretch; */
     background-color: white;
     box-shadow: 2px 2px 20px rgb(226 223 223);
     border-radius: 20px;
     height: 230px;
-
     text-decoration: none;
     position: relative;
     box-sizing: border-box;
     color: #333;
     width: 100%;
     margin-bottom: 4%;
+    @include desktop-only {
+        width: 45%;
+        margin-right: 5%;
+        height: 400px;
+    }
 
     &__new {
-
         position: absolute;
         width: 75px;
         padding: 0.5*$layout_margin 0;
