--- a/sass/composants/_bouton.scss
+++ b/sass/composants/_bouton.scss
@@ -32,9 +32,9 @@
     margin: 0.5*$layout_margin 0;
     left: $layout_margin;
     @include desktop-only{
-        width: 60%;
-        margin-right: 2*$layout_margin;
-        margin-left: 2*$layout_margin;
+        width: 30%;
+        /* margin-right: 2*$layout_margin;
+        margin-left: 2*$layout_margin; */
         padding-right: 2%;
     } 
 
