--- a/sass/Utils/_variable.scss
+++ b/sass/Utils/_variable.scss
@@ -11,6 +11,8 @@ $layout_margin :1rem;
 $padding:5%;
 
 $breakpoints: (
-tablet: 768px,
-desktop: 992px
+    phone: 500px,
+    tablet: 768px,
+    desktop: 900px,
+   
 ); 
