--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,9 +2,9 @@ footer {
     background-color: darken($colour-gray, 70%);
     display: flex;
     flex-direction: column;
-    
     width: 100%;
     padding: 2*$layout_margin 1.5*$layout_margin;
+   
     
 
     & a {
@@ -23,11 +23,23 @@ footer {
             color: $colour-primary;
         }
     }
-
+ & ul {
+    @include desktop-only{
+        display: flex;
+        flex-direction: row;
+        justify-content:space-between;
+        
+    }
+ }
     & li {
         list-style-type: none;
         margin-bottom: 0.5*$layout_margin;
         font-weight: 900;
+        @include desktop-only{
+           width: 20%;
+           font-size: 70%;
+           
+        }
         
       
     }
