--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,6 +31,11 @@ footer li a {
     font-weight: 600;
     font-size: large; 
     color: white;
+    @include desktop-only{
+     font-size: 95%;
+        
+        
+     }
 }
 h4 {
     font-family: Arial, Helvetica, sans-serif;
