--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -28,20 +28,24 @@
     }
 
     /*  PLATS */
-    .menu__description--plat{
-        @include desktop-only{
+    .menu__description--plat {
+        @include desktop-only {
             display: flex;
             flex-flow: row wrap;
-            justify-items: center;
-            align-items: center;
+            justify-content: space-between;
+            align-content: center;
             background-color: $colour-lightgray;
+            padding: 0 2*$layout_margin;
         }
     }
+
     &__description {
         padding: 2*$layout_margin;
         background-color: $colour-lightgray;
-        @include desktop-only{
-           width: 30%;
+
+        @include desktop-only {
+            width:400px;
+          padding: 2*$layout_margin 0;
         }
 
         &--titre {
@@ -49,20 +53,21 @@
             text-transform: uppercase;
             padding-bottom: 0.5*$layout_margin;
             margin-bottom: $layout_margin;
-            
+
             position: relative;
-        
+
             &:after {
                 content: '';
                 border-bottom: 3px solid $colour-tertiary;
                 width: 50px;
                 height: 10px;
                 position: absolute;
-                left:0;
+                left: 0;
                 top: 1.5*$layout_margin;
-                
+
             }
         }
+
         &--bloc_plat {
             width: 100%;
             background-color: $colour-white;
@@ -70,30 +75,32 @@
             border-radius: 20px;
             margin-bottom: $layout_margin;
             @include shadow;
-                
-            & h4{
-                @include textcut;
-                }
-               
 
-            &--details {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-                    & p{
-                        @include textcut;
-                        margin-right: 2%;}
-                    
-                     & h4{
-                        margin-left: 10%;
-                        overflow: visible;
-                        text-overflow: initial;
-                    } 
-                } 
+            & h4 {
+                @include textcut;
             }
 
-        
+
+            &--details {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+
+                & p {
+                    @include textcut;
+                    margin-right: 2%;
+                }
+
+                & h4 {
+                    margin-left: 10%;
+                    overflow: visible;
+                    text-overflow: initial;
+                }
+            }
+        }
+
+
 
     }
 
