--- a/sass/composants/_card.scss
+++ b/sass/composants/_card.scss
@@ -16,6 +16,10 @@
         width: 48%;
         height: 400px;
     }
+    @include tablet-only {
+        width: 40%;
+        height: 200px;
+    }
 
     &__new {
         position: absolute;
@@ -40,6 +44,9 @@
         border-radius: 20px 20px 0px 0px;
         box-sizing: border-box;
         @include desktop-only {
+            height: 80%;
+        }
+        @include tablet-only {
             height: 80%;
         }
     }
